--- a/Tema-1/Exercici2/style.css
+++ b/Tema-1/Exercici2/style.css
@@ -22,15 +22,15 @@ body{
             flex-flow: row nowrap;
             align-items: center;
         }
-            .logo{
+            .inicio{
                 background: #FF6000;
                 flex: 1 1 auto;
             }
-            .nav{
+            .opciones{
                 background: #FF6000;
                 flex: 5 1 auto;
             }
-            .social{
+            .contacto{
                 background: #FF6000;
                 flex: 1 1 auto;
             }
