copio el contenido correcto en style.css

--- a/Tema-1/Exercici1/style.css
+++ b/Tema-1/Exercici1/style.css
@@ -1,40 +1,82 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Ejercicio 1 HTML y CSS (Tema 1)</title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, user-scalable=no,maximum-scale=1.0, minimum-scale=1.0, initial-scale=1.0", >
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="father">
-        <header class="header">
-            <div class="menu">
-                <div class="logo"></div>
-                <div class="nav"></div>
-                <div class="social"></div>
-            </div>
-            <div class="main-text">
-                <h1></h1>
-            </div>
-        </header>
-        <section class="section">
-            <div class="articles">
-                <div class="article"></div>
-                <div class="article"></div>
-                <div class="article"></div>
-                <div class="article"></div>
-                <nav class="navegation"></nav>
-            </div>
-            <aside class="aside">
-                <div class="adver"></div>
-                <div class="adver"></div>
-            </aside>
-        </section>
-        <footer class="footer">
-            <nav class="foot"></nav>
-        </footer>
-    </div>
-</body>
-</html>
+*{
+    margin: 10px;
+    padding: 10px;
+}
+body{
+    box-sizing: border-box;
+    max-width:1200px;
+    margin: 0 auto;
+}
+.father{
+    display: flex;
+    flex-flow: column nowrap;
+}
+    .header{
+        background: #000;
+        display: flex;
+        flex-flow: column nowrap;
+    }
+        .menu{
+            background: #454545;
+            display: flex;
+            flex-flow: row nowrap;
+            align-items: center;
+        }
+            .inicio{
+                background: #FF6000;
+                flex: 1 1 auto;
+            }
+            .opciones{
+                background: #FF6000;
+                flex: 5 1 auto;
+            }
+            .contacto{
+                background: #FF6000;
+                flex: 1 1 auto;
+            }
+        .main-text{
+            flex: 1 1 auto;
+            background: #FFA559;
+        }
+        h1{
+            background: #FFd460;
+        }
+    .section{
+        background: #000;
+        display: flex;
+    }
+    .articles{
+        background: #4e4e6a;
+        display: flex;
+        flex-flow: row wrap;
+        flex: 2 1 auto;
+    }
+    .article{
+        background: #1f6cb0;
+        flex: 1 1 40%;
+    }
+    .navegation{
+        background: #70a3c4;
+        flex: 1 1 100%;
+    }
+    .aside{
+        background: #f73f52;
+        flex: 1 1 auto;
+    }
+        .adver{
+            background: #FFea85;
+        }
+    .footer{
+        background: #000;
+        display: flex;
+        justify-content: center;
+    }
+        .foot{
+            background: #1f6cb0;
+            width: 100%;
+        }
+@media all and (max-width: 800px){
+    .section{
+        flex-direction: column;
+    }
+}
