Corrijo orden de clases en media query 425

--- a/Tema-1/Exercici3/style.css
+++ b/Tema-1/Exercici3/style.css
@@ -100,17 +100,21 @@ h1 {
     }
 }
 @media all and (max-width: 425px) {
+    .menu{
+        flex-direction: column;
+        height: auto;
+    }
     .section {
         flex-direction: column;
         background: #E7B10A;
     }
-    .aside{
-        background: #F07b3f;
-    }
-    .products{
-        background: #0F4C75;
-    }
-    .product{
-        background: #0C7B93;
-    }
+}
+.products{
+    background: #0F4C75;
+}
+.product{
+    background: #0C7B93;
+}
+.aside{
+    background: #F07b3f;
 }
