--- a/Tema-1/Exercici3/style.css
+++ b/Tema-1/Exercici3/style.css
@@ -102,10 +102,12 @@ h1 {
 
 @media all and (max-width: 425px) {
     .menu {
-        flex-direction: column;        
+        flex-direction: column;
     }
-    
-    .index, .options, .contact {
+
+    .index,
+    .options,
+    .contact {
         background: #ea5455;
         width: 80%;
     }
