comento en menu{} a align-items: center;

--- a/Tema-1/Exercici3/style.css
+++ b/Tema-1/Exercici3/style.css
@@ -24,7 +24,7 @@ body {
         background: #454545;
         display: flex;
         /* flex-flow: row nowrap; */
-        align-items: center;
+        /* align-items: center; */
     }
 
         .index {
