comento a row en .products{} em flex-flow: row wrap;

--- a/Tema-1/Exercici3/style.css
+++ b/Tema-1/Exercici3/style.css
@@ -59,7 +59,7 @@ body {
     .products {
         background: #4e4e6a;
         display: flex;
-        flex-flow: row wrap;
+        flex-flow: /* row */ wrap;
         flex: 2 1 auto;
     }
 
