Comento en .footer{} el justify-content: center;

--- a/Tema-1/Exercici3/style.css
+++ b/Tema-1/Exercici3/style.css
@@ -85,7 +85,7 @@ body {
 .footer {
     background: #000;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
     .foot {
