agrego disp flex en .main-text{} y width100% en .first-h1{}

--- a/Tema-1/Exercici3/style.css
+++ b/Tema-1/Exercici3/style.css
@@ -45,10 +45,12 @@ body {
 .main-text {
     /*  flex: 1 1 auto; */
     background: #F07b3f;
+    display: flex;
 }
 
     .first-h1 {
         background: #FFd460;
+        width: 100%;
     }
 
 .section {
