descomento los @query

--- a/Tema-1/Exercici3/style.css
+++ b/Tema-1/Exercici3/style.css
@@ -95,7 +95,7 @@ body {
         width: 100%;
     }
  
-/* @media all and (max-width: 768px) {
+@media all and (max-width: 768px) {
     .section {
         flex-direction: column;
         background: yellow;
@@ -130,4 +130,4 @@ body {
     .aside {
         background: #F07b3f;
     }
-} */
+}
