Cambio color de .section{}

--- a/Tema-1/Exercici3/style.css
+++ b/Tema-1/Exercici3/style.css
@@ -114,7 +114,7 @@ body {
 
     .section {
         flex-direction: column;
-        background: #E7B10A;
+        background: #FFED00;
     }
 
     .products {
