--- a/Tema-1/Exercici3/style.css
+++ b/Tema-1/Exercici3/style.css
@@ -113,7 +113,7 @@ body {
         }
 
             .product {
-                background: #0C7B93;
+                background: #09506F;
             }
 
         .navegation {
