Cambio color fondo en .menu en @mq movil

--- a/Tema-1/Exercici3/style.css
+++ b/Tema-1/Exercici3/style.css
@@ -101,6 +101,7 @@ body {
 @media all and (max-width: 430px) {
     .menu {
         flex-direction: column;
+        background: #2D4059;
     }
 
     .section {
